 31-12-2006 Qball <Qball@sarine.nl>
    * src/playlist3-find3-browser.c:	Fix ctrl-j
    * src/playlist3-find2-browser.c:	Cleanups

30-12-2006 Qball <qball@qballcow.nl>
    * src/*:				Update for api
    * src/plugin.h: 			Change plugin api
    * src/main.c: 			Change loading order
    * src/*.c:				Renumber Function keybindings
    * src/playlist3-find3-browser.*: 	Added a playlist search.
    * src/playlist3-find2-browser.c: 	Use gtk_tree_row_reference to select
    browser.
    * src/playlist3-find2-browser.c: Cleaned up. Added max search criterias and
    default search on open.
    * src/plugin.c: Removed Markup from error messages.

29-12-2006 Qball <Qball@qballcow.nl>
    * src/playlis3-find2-browser.*: Added a improved database search

28-12-2006 Qball <qball@qballcow.nl>
    * src/main.c:	Make the error dialog handle multiple errors in one
    window
    * src/*.c:		Replace g_free with a macro that sets the pointer to
    NULL again
    * src/cofnig1.c:	Use cfg_free_string for clearing strings
    * src/config1.h:	Remove the /*done*/ comments.
    * src/config1.c:	Remove cfg_free_string
    * src/config1.h:	Define a macro cfg_free_string as g_free(a);a=NULL;
    * src/main.c:	Change indent, some cleanups + marking of strings
    * src/id3info.c:	Hide notebook tabs when not valid.
    * src/id3info.c:	Cleanup the code, re-indent add extra checks etc.

27-12-2006 Qball <qball@qballcow.nl>
    * glade/gmpc.glade: 	Add Clear buttons	
    * src/id3info.c:	Add support functions for the clear button	
    * glade/gmpc.glade:	Remove filechooser buttons
    * src/id3info.c:	Remove use of filechooser buttons.
    * src/id3info.c:	Copy lyric save to artist/album.

26-12-2006 Qball <qball@qballcow.nl>
    * configure.ac:	Remove libxml dep
    * src/Makefile.am: remove libxml dep
    * src/playlist3-information.c: Change icon to gtk-dialog-info
    * src/playlist3-file-browser.c:	Fix reupdate again

23-12-2006 Qball <Qball@sarine.nl>