@@ -1,3 +1,8 @@
+ 01-02-2006 Qball <Qball@sarine.nl>
+ 	* src/playlist3-find[2|3]-browser.c:	adding border around blue bar.
+	* configure.ac:	Bump to libmpd 0.12.11
+	* src/playlist3-find3-browser.c:		adding performer
+
  31-12-2006 Qball <Qball@sarine.nl>
     * src/playlist3-find3-browser.c:	Fix ctrl-j
     * src/playlist3-find2-browser.c:	Cleanups
